Update to prototype with search and flat structure

--- a/data-workspace-about.html
+++ b/data-workspace-about.html
@@ -57,7 +57,7 @@
               <a href="index2.html" class="govuk-header__link govuk-header__link--homepage">
                 <span class="govuk-header__logotype">
                   <span class="govuk-header__logotype-text">
-                    Data Workspace
+                   Data Workspace
                   </span>
                 </span>
               </a>
@@ -72,12 +72,12 @@
                     </a>
                   </li>
                   <li class="govuk-header__navigation-item">
-                    <a class="govuk-header__link" href="index2.html">
-                      Catalogue
+                    <a class="govuk-header__link" href="index.html">
+                      Find data
                     </a>
                   </li>
                   <li class="govuk-header__navigation-item">
-                    <a class="govuk-header__link" href="data-workspace-tools.html">
+                    <a class="govuk-header__link" href="tools.html">
                       Tools
                     </a>
                   </li>
@@ -112,6 +112,7 @@
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
       <div class="govuk-grid-row govuk-body">
+        <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl">What is Data Workspace?</h1>
 
         <p>Data Workspace is the place to find the data, analysis tools and insight you need to do your job. It will help you develop insight-driven strategy and policy, and monitor, evaluate and report your impact.</p>
@@ -126,6 +127,7 @@
 
         <p> This is a new service that is in development. We welcome your feedback.</p>
       </div>
+        </div>
     </main>
   </div>
 
