--- a/datahub_investments_raw.html
+++ b/datahub_investments_raw.html
@@ -68,8 +68,8 @@
                         </a>
                       </li>
                       <li class="govuk-header__navigation-item">
-                        <a class="govuk-header__link" href="index2.html">
-                          Catalogue
+                        <a class="govuk-header__link" href="index.html">
+                          Find data
                         </a>
                       </li>
                       <li class="govuk-header__navigation-item">
@@ -98,7 +98,7 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">Data Hub Investments</h1>
+            <h1 class="govuk-heading-l">Data Hub investment projects</h1>
             <p class="govuk-body">
               Records of investment projects, either into or within the UK, that DIT has supported or is aware of.<br><br>
 
