--- a/index.html
+++ b/index.html
@@ -266,7 +266,29 @@
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Investment projects - Daily
+                            <a class="govuk-link--no-visited-state" href="datahub_investments_raw.html">Data Hub investment
+                                projects</a>
+                        </h3>
+                    </div>
+                </div>
+
+                <p class="govuk-body">Data about investment projects, either into or within the UK, that DIT has
+                    supported or is aware of.</p>
+                <p class="govuk-body-s">
+                    <strong>Last updated</strong>: 28/10/2019
+                    <br>
+                    <strong>Data use</strong>: Analyse in tools
+                    <br>
+                    <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 52
+                </p>
+
+                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
+                <div class="govuk-grid-row">
+                    <div class="govuk-grid-column-two-thirds">
+                        <h3 class="govuk-heading-m">
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Investment projects - Daily
                                 cut</a>
                         </h3>
                     </div>
@@ -275,9 +297,9 @@
                 <p class="govuk-body">A daily cut of the investment projects recorded on Data Hub. These are investments
                     either into or within the UK, that DIT has supported or is aware of.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Data Cut
+                    <strong>Data use</strong>: Download
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
                     <br>
@@ -288,7 +310,7 @@
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Completed OMIS orders</a>
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Completed OMIS orders</a>
                         </h3>
                     </div>
                 </div>
@@ -296,18 +318,20 @@
                 <p class="govuk-body">All Overseas Market Introduction Service (OMIS) orders completed in the past 7
                     years.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Data Cut
+                    <strong>Data use</strong>: Download
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 12
                 </p>
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Data Hub interactions &
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Data Hub interactions &
                                 service deliveries</a>
                         </h3>
                     </div>
@@ -315,92 +339,80 @@
 
                 <p class="govuk-body">Records of interactions between DIT staff and company contacts.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Raw dataset
+                    <strong>Data use</strong>: Analyse in tools
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 34
                 </p>
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Data Hub companies</a>
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Data Hub companies</a>
                         </h3>
                     </div>
                 </div>
 
                 <p class="govuk-body">Records of companies and other organisations that DIT has interacted with.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Raw dataset
+                    <strong>Data use</strong>: Analyse in tools
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 41
                 </p>
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Data Hub contacts</a>
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Data Hub contacts</a>
                         </h3>
                     </div>
                 </div>
 
                 <p class="govuk-body">Records of business contacts that DIT staff have interacted with.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Raw dataset
+                    <strong>Data use</strong>: Analyse in tools
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 54
                 </p>
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Data Hub events</a>
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Data Hub events</a>
                         </h3>
                     </div>
                 </div>
 
                 <p class="govuk-body">Records of DIT events in the UK and overseas.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Raw dataset
+                    <strong>Data use</strong>: Analyse in tools
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 27
                 </p>
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Data Hub investment
-                                projects</a>
-                        </h3>
-                    </div>
-                </div>
-
-                <p class="govuk-body">Data about investment projects, either into or within the UK, that DIT has
-                    supported or is aware of.</p>
-                <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
-                    <br>
-                    <strong>Format</strong>: Raw dataset
-                    <br>
-                    <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
-                </p>
-
-                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
-                <div class="govuk-grid-row">
-                    <div class="govuk-grid-column-two-thirds">
-                        <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Overseas Market
+                            <a class="govuk-link--no-visited-state" href="data-workspace-datareport-page.html">Overseas Market
                                 Introduction Service (OMIS) Orders</a>
                         </h3>
                     </div>
@@ -409,16 +421,18 @@
                 <p class="govuk-body">Records of Overseas Market Introduction Service (OMIS) orders delivered by DIT for
                     UK companies.</p>
                 <p class="govuk-body-s">
-                    <strong>Last updated</strong>: Today
+                    <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Raw dataset
+                    <strong>Data use</strong>: Analyse in tools
                     <br>
                     <strong>Sources</strong>: <a href="datahubresults.html">Data Hub</a>
+                    <br>
+                    <strong>Views</strong>: 24
                  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Countries & territories
+                            <a class="govuk-link--no-visited-state" href="https://data.trade.gov.uk/catalogue/reference-data-sets/reference/countries-and-territories-trading-blocs">Countries & territories
                                 with trading blocs </a>
                         </h3>
                     </div>
@@ -428,16 +442,19 @@
                 <p class="govuk-body-s">
                     <strong>Last updated</strong>: 28/10/2019
                     <br>
-                    <strong>Format</strong>: Data Cut
+                    <strong>Data use</strong>: Reference data
                     <br>
                     <strong>Sources</strong>: <a href="ditresults.html">DIT</a>
+                    <br>
+                    <strong>Views</strong>: 81
+
                 </p>
 
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
                         <h3 class="govuk-heading-m">
-                            <a class="govuk-link" href="data-workspace-datareport-page.html">Countries & territories
+                            <a class="govuk-link--no-visited-state" href="https://data.trade.gov.uk/catalogue/reference-data-sets/reference/countries-territories-hmtc-overseas-regions">Countries & territories
                                 with HMTC overseas regions</a>
                         </h3>
                     </div>
@@ -448,9 +465,11 @@
                 <p class="govuk-body-s">
                     <strong>Last updated</strong>: 07/10/2019
                     <br>
-                    <strong>Format</strong>: Data Cut
+                    <strong>Data use</strong>: Reference data
                     <br>
                     <strong>Sources</strong>: <a href="ditresults.html">DIT</a>
+                    <br>
+                    <strong>Views</strong>: 79
                 </p>
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-margin-top-0">
 
