--- a/tools.html
+++ b/tools.html
@@ -124,8 +124,8 @@
                     </a>
                   </li>
                   <li class="govuk-header__navigation-item">
-                    <a class="govuk-header__link" href="index2.html">
-                      Catalogue
+                    <a class="govuk-header__link" href="index.html">
+                      Find data
                     </a>
                   </li>
                   <li class="govuk-header__navigation-item">
