--- a/datahub_omis_tools_access.html
+++ b/datahub_omis_tools_access.html
@@ -48,7 +48,7 @@
     <header class="govuk-header " role="banner" data-module="govuk-header">
             <div class="govuk-header__container govuk-width-container">
                 <div class="govuk-header__logo">
-                  <a href="index2.html" class="govuk-header__link govuk-header__link--homepage">
+                  <a href="index.html" class="govuk-header__link govuk-header__link--homepage">
                     <span class="govuk-header__logotype">
                       <span class="govuk-header__logotype-text">
                         Data Workspace
